# openenclave

enclave/: CMakeLists.txt  asym_keys.c
enclave/core/: CMakeLists.txt  sbrk.c
enclave/core/optee/: gp.c
enclave/core/sgx/: calls.c  exception.c  globals.c
enclave/core/sgx/linux/: threadlocal.c
enclave/crypto/: cert.c
enclave/sgx/: qeidinfo.c  report.c  revocationinfo.c
host/: CMakeLists.txt
host/sgx/: calls.c  create.c  loadelf.c  report.c
include/openenclave/: enclave.h  host.h
include/openenclave/bits/: properties.h  types.h
include/openenclave/internal/: globals.h  load.h  sgxcreate.h  sgxtypes.h
scripts/ansible/roles/linux/intel/vars/: bionic.yml
tests/: CMakeLists.txt
tests/blob/: CMakeLists.txt  README.md  blob.edl
tests/blob/enc/: CMakeLists.txt  blob.txt  enc.c
tests/blob/host/: CMakeLists.txt  host.c
tests/report/: CMakeLists.txt
tests/report/common/: tests.cpp
tests/report/enc/: CMakeLists.txt  enc.cpp
tests/report/host/: host.cpp
tools/: CMakeLists.txt
tools/oeblob/: CMakeLists.txt  main.c
tools/oeedger8r/src/: Headers.ml  Sources.ml
tools/oesign/: main.c
